tests/ui/wf/return-type-non-wf-no-ice.current.stderr
error[E0277]: `T` is not an iterator
  --> $DIR/return-type-non-wf-no-ice.rs:13:16
   |
LL | fn foo<T>() -> Foo<T> {
   |                ^^^^^^ `T` is not an iterator
   |
note: required by a bound in `Foo`
  --> $DIR/return-type-non-wf-no-ice.rs:10:8
   |
LL | pub struct Foo<T>(T)
   |            --- required by a bound in this struct
LL | where
LL |     T: Iterator,
   |        ^^^^^^^^ required by this bound in `Foo`
help: consider restricting type parameter `T` with trait `Iterator`
   |
LL | fn foo<T: std::iter::Iterator>() -> Foo<T> {
   |         +++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
